--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ bardapi==0.1.23a0
 Flask==2.0.1
 Flask_Bcrypt==1.0.1
 Flask_DebugToolbar==0.13.1
+flask_sqlalchemy==3.0.3
 Flask_WTF==1.1.1
 WTForms==3.0.1
