--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,144 @@
+anyio==3.7.1
+appdirs==1.4.4
+appnope==0.1.0
+argcomplete==3.0.8
+arrow==1.2.3
+asttokens==2.2.1
+attrs==22.2.0
+Babel==2.8.0
+backcall==0.1.0
 bardapi==0.1.23a0
-Flask==2.2.2
-Flask_Bcrypt==1.0.1
-Flask_DebugToolbar==0.13.1
-flask_sqlalchemy==3.0.3
-Flask_WTF==1.1.1
-WTForms==3.0.1
+bcrypt==4.0.1
+beautifulsoup4==4.12.2
+blinker==1.6.2
+browser-cookie3==0.19.1
+cachetools==4.2.4
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
+colorama==0.4.4
+command-not-found==0.3
+cryptography==3.4.8
+dbus-python==1.2.18
+decorator==4.3.0
+deep-translator==1.11.4
+distro==1.7.0
+distro-info===1.1build1
+dnspython==2.3.0
+docopt==0.6.2
+dotty-dict==1.3.1
+exceptiongroup==1.1.0
+executing==1.2.0
+Flask==2.3.2
+Flask-Bcrypt==1.0.1
+Flask-DebugToolbar==0.13.1
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.1.1
+google-api-core==1.34.0
+google-auth==1.35.0
+google-cloud-core==1.7.3
+google-cloud-translate==2.0.1
+googleapis-common-protos==1.59.1
+greenlet==2.0.2
+grip==4.6.1
+grpcio==1.56.0
+grpcio-status==1.48.2
+gunicorn==20.1.0
+gyp==0.1
+h11==0.14.0
+h2==4.1.0
+halo==0.0.31
+hid==1.0.5
+hjson==3.1.0
+hpack==4.0.0
+httpcore==0.17.3
+httplib2==0.20.2
+httpx==0.24.1
+hyperframe==6.0.1
+idna==3.4
+importlib-metadata==4.6.4
+iniconfig==2.0.0
+ipython==8.12.0
+ipython-genutils==0.2.0
+itsdangerous==2.1.2
+jedi==0.18.2
+jeepney==0.7.1
+Jinja2==3.1.2
+jsonschema==4.17.3
+keyring==23.5.0
+langdetect==1.0.9
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+log-symbols==0.0.14
+lz4==4.3.2
+Markdown==3.4.1
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+milc==1.6.6
+mongo==0.2.0
+more-itertools==8.10.0
+netifaces==0.11.0
+nose==1.3.7
+numpy==1.21.5
+oauthlib==3.2.0
+packaging==23.0
+parso==0.3.1
+path-and-address==2.0.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.5.0
+pipreqs==0.4.13
+pluggy==1.0.0
+prompt-toolkit==3.0.38
+protobuf==3.20.3
 psycopg2-binary==2.9.6
+ptyprocess==0.6.0
+pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.19
+pycryptodomex==3.18.0
+Pygments==2.4.0
+PyGObject==3.42.1
+pyinotify==0.9.6
+PyJWT==2.3.0
+pymongo==4.3.3
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyrsistent==0.19.3
+pyserial==3.5
+pytest==7.2.0
+python-apt==2.4.0+ubuntu1
+python-dateutil==2.7.3
+pytz==2022.1
+pyusb==1.2.1
+PyYAML==5.4.1
+qmk==1.1.2
+requests==2.28.2
+rsa==4.9
+SecretStorage==3.3.1
+simplegeneric==0.8.1
+simplejson==3.17.6
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4.1
+spinners==0.0.24
+SQLAlchemy==2.0.19
+stack-data==0.6.2
+systemd-python==234
+termcolor==2.3.0
+text-unidecode==1.2
+tomli==2.0.1
+traitlets==5.0.0
+typing_extensions==4.6.3
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.14
+wadllib==1.3.6
+wcwidth==0.1.7
+Werkzeug==2.3.6
+WTForms==3.0.1
+yarg==0.1.9
+zipp==1.0.0
